REFACTOR VALIDACIÓ I CALCUL DE TAULELL, MOGUT A DOS NOVES CLASSES: ValidadorJugada i CalculadorPuntuacio